--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "name": "gaia",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "nodemon",
-    "build": "tsc --build",
-    "lint": "eslint --ext .js,.ts . --quiet --fix",
-    "test": "ts-mocha -p ./tsconfig.json -u tdd ./test/**/*.test.ts --recursive --paths",
-    "prepare": "pnpx husky install && ts-patch install -s",
-    "prod": "pnpm run build && pnpm run start"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "envalid": "^8.1.1",
-    "module-alias": "^2.2.3",
-    "node-emoji": "^2.2.0",
-    "pino": "^10.1.0",
-    "prisma": "^7.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11",
-    "pino-pretty": "^13.1.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
-  }
+   "name": "gaia",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "node ./dist/index.js",
+      "dev": "nodemon",
+      "build": "tsc --build",
+      "lint": "eslint --ext .js,.ts . --quiet --fix",
+      "test": "ts-mocha -p ./tsconfig.json -u tdd ./test/**/*.test.ts --recursive --paths",
+      "prepare": "pnpx prisma generate",
+      "prod": "pnpm run build && pnpm run start"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@prisma/client": "^7.0.1",
+      "discord.js": "^14.25.1",
+      "dotenv": "^17.2.3",
+      "envalid": "^8.1.1",
+      "module-alias": "^2.2.3",
+      "node-emoji": "^2.2.0",
+      "pino": "^10.1.0",
+      "prisma": "^7.0.0"
+   },
+   "devDependencies": {
+      "@eslint/eslintrc": "^3.3.1",
+      "@eslint/js": "^9.39.1",
+      "@typescript-eslint/eslint-plugin": "^8.48.0",
+      "@typescript-eslint/parser": "^8.48.0",
+      "eslint": "^9.39.1",
+      "eslint-config-prettier": "^10.1.8",
+      "eslint-plugin-prettier": "^5.5.4",
+      "nodemon": "^3.1.11",
+      "pino-pretty": "^13.1.2",
+      "prettier": "^3.6.2",
+      "ts-node": "^10.9.2",
+      "tsconfig-paths": "^4.2.0"
+   }
 }
