feat: completion of development tools & implementation of status updates live

--- a/package.json
+++ b/package.json
@@ -4,32 +4,39 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "node ./dist/index.js",
+      "start": "node -r typescript-transform-paths/register ./dist/index.js",
+      "dev:db": "concurrently \"prisma dev\" \"nodemon\"",
       "dev": "nodemon",
       "build": "tsc --build",
       "lint": "eslint --ext .js,.ts . --quiet --fix",
       "test": "ts-mocha -p ./tsconfig.json -u tdd ./test/**/*.test.ts --recursive --paths",
-      "prepare": "pnpx prisma generate",
+      "prepare": "prisma generate",
       "prod": "pnpm run build && pnpm run start"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@prisma/adapter-pg": "^7.0.1",
       "@prisma/client": "^7.0.1",
+      "axios": "^1.13.2",
       "discord.js": "^14.25.1",
       "dotenv": "^17.2.3",
       "envalid": "^8.1.1",
       "module-alias": "^2.2.3",
       "node-emoji": "^2.2.0",
+      "pg": "^8.16.3",
       "pino": "^10.1.0",
-      "prisma": "^7.0.0"
+      "prisma": "^7.0.1",
+      "toad-scheduler": "^3.1.0",
+      "typescript-transform-paths": "^3.5.5"
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3.3.1",
       "@eslint/js": "^9.39.1",
       "@typescript-eslint/eslint-plugin": "^8.48.0",
       "@typescript-eslint/parser": "^8.48.0",
+      "concurrently": "^9.2.1",
       "eslint": "^9.39.1",
       "eslint-config-prettier": "^10.1.8",
       "eslint-plugin-prettier": "^5.5.4",
